--- a/FdxLeadAssignmentPlugin/FdxLeadAssignmentPlugin.csproj
+++ b/FdxLeadAssignmentPlugin/FdxLeadAssignmentPlugin.csproj
@@ -76,6 +76,8 @@
     <Compile Include="AssignLead_Update.cs" />
     <Compile Include="CRMQueryExpression.cs" />
     <Compile Include="Lead.cs" />
+    <Compile Include="LeadAssignment_Create.cs" />
+    <Compile Include="LeadAssignment_Variables.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProspectData.cs" />
     <Compile Include="UpdateProspectData.cs" />
